<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>pprl-service-parent</artifactId>
        <groupId>de.unileipzig.dbs</groupId>
        <version>2.0</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>pprl-service-linkage-unit</artifactId>
    <name>PPRL Service Linkage Unit</name>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>

        <jackson-databind-nullable-version>0.2.7</jackson-databind-nullable-version>
        <jakarta-annotation-version>3.0.0</jakarta-annotation-version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>de.unileipzig.dbs</groupId>
            <artifactId>pprl-service-common</artifactId>
            <version>2.0</version>
        </dependency>
        <dependency>
            <groupId>de.unileipzig.dbs</groupId>
            <artifactId>pprl-core-matcher</artifactId>
            <version>2.0</version>
        </dependency>

        <!-- Classifier Service Client -->
        <dependency>
            <groupId>javax.annotation</groupId>
            <artifactId>javax.annotation-api</artifactId>
            <version>1.3.2</version>
        </dependency>
        <dependency>
            <groupId>org.openapitools</groupId>
            <artifactId>jackson-databind-nullable</artifactId>
            <version>${jackson-databind-nullable-version}</version>
        </dependency>
        <dependency>
            <groupId>jakarta.annotation</groupId>
            <artifactId>jakarta.annotation-api</artifactId>
            <version>${jakarta-annotation-version}</version>
<!--            <scope>provided</scope>-->
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                        <configuration>
                            <classifier>spring-boot</classifier>
                            <mainClass>
                                de.unileipzig.dbs.pprl.service.linkageunit.PprlLinkageUnitApplication
                            </mainClass>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
<!--            <plugin>-->
<!--                <groupId>org.openapitools</groupId>-->
<!--                <artifactId>openapi-generator-maven-plugin</artifactId>-->
<!--                <version>7.15.0</version>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <goals>-->
<!--                            <goal>generate</goal>-->
<!--                        </goals>-->
<!--                        <configuration>-->
<!--                            <inputSpec>${project.basedir}/src/main/resources/classifier-service-openapi.json</inputSpec>-->
<!--                            <apiPackage>de.unileipzig.dbs.pprl.service.linkageunit.services.clients.classifier.api</apiPackage>-->
<!--                            <modelPackage>de.unileipzig.dbs.pprl.service.linkageunit.services.clients.classifier.model</modelPackage>-->
<!--                            <generatorName>java</generatorName>-->
<!--                            <library>webclient</library>-->
<!--                            <output>${project.basedir}</output>-->
<!--&lt;!&ndash;                            <output>${project.build.directory}/generated-sources/classifier-service-openapi</output>&ndash;&gt;-->
<!--&lt;!&ndash;                            <skipOverwrite>true</skipOverwrite>&ndash;&gt;-->
<!--                            <skipValidateSpec>true</skipValidateSpec>-->
<!--                            <configOptions>-->
<!--                                <sourceFolder>src/main/java</sourceFolder>-->
<!--                                <generateBuilders>True</generateBuilders>-->
<!--                                <hideGenerationTimestamp>true</hideGenerationTimestamp>-->
<!--                            </configOptions>-->
<!--                            <generateApiDocumentation>false</generateApiDocumentation>-->
<!--                            <generateModelDocumentation>false</generateModelDocumentation>-->
<!--                            <generateApiTests>false</generateApiTests>-->
<!--                            <generateModelTests>false</generateModelTests>-->
<!--                            <supportingFilesToGenerate>ApiClient.java,Authentication.java,HttpBasicAuth.java,HttpBearerAuth.java,ApiKeyAuth.java,JavaTimeFormatter.java,RFC3339DateFormat.java,ApiUtil.java</supportingFilesToGenerate>-->
<!--                        </configuration>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
        </plugins>
    </build>
</project>